<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    android:background="#FF9800"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#6255b5"
        >

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_sencillo"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="#fff"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/casilla"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

    <TextView
        android:id="@+id/Latitud_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"
        />


    <TextView
        android:id="@+id/Latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"

        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/casilla"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

    <TextView
        android:id="@+id/Longitud_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/Longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"
        />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/casilla"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

    <TextView
        android:id="@+id/Altitud_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitud"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="15sp"

      />

    <TextView
        android:id="@+id/Altitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitud_valor"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/casilla"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

    <TextView
        android:id="@+id/Precision_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precisi_n"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/Precision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precisi_n"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"
        />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/casilla"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

    <TextView
        android:id="@+id/Direccion_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/te_encuentas_en_la_direcci_n"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/mensaje_id3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#fff"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />


    </LinearLayout>

    </LinearLayout>



